--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,296 @@
-cohere
-flask
+absl-py==2.1.0
+aenum==3.1.15
+aiofiles==24.1.0
+aiohappyeyeballs==2.3.6
+aiohttp==3.10.3
+aiosignal==1.3.1
+alembic==1.13.2
+altair==4.1.0
+aniso8601==9.0.1
+annotated-types==0.7.0
+anyio==4.4.0
+asgiref==3.7.2
+astor==0.8.1
+asttokens==2.4.1
+asyncio==3.4.3
+attrs==23.2.0
+backports.tarfile==1.2.0
+base58==2.1.1
+betterpath==0.2.2
+bidict==0.23.1
+blinker==1.8.2
+boto3==1.35.38
+botocore==1.35.38
+CacheControl==0.14.0
+cachelib==0.13.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+clarabel==0.7.1
+click==8.1.7
+cloudpickle==2.2.1
+cohere==5.11.0
+colorama==0.4.6
+comm==0.2.2
+components==1.2.8
+contourpy==1.2.0
+cryptography==42.0.8
+cssselect==1.2.0
+cssutils==2.9.0
+cvxpy==1.4.2
+cycler==0.12.1
+databricks-sdk==0.34.0
+dataclasses-json==0.6.7
+debugpy==1.8.1
+decorator==5.1.1
+deepgram-sdk==3.5.0
+Deprecated==1.2.14
+deprecation==2.1.0
+diffusers==0.30.0
+dill==0.3.9
+distro==1.9.0
+Django==5.0.2
+dnspython==2.6.1
+docker==7.1.0
+docutils==0.21.2
+ecos==2.0.13
+entrypoints==0.4
+enum-compat==0.0.3
+eventlet==0.36.1
+executing==2.0.1
+fastavro==1.9.7
+filelock==3.15.4
+firebase-admin==6.5.0
+flappy_bird @ file:///C:/PROJECTS/Flappy%20Bird%20-%20Pygame/dist/flappy_bird-0.1-py3-none-any.whl#sha256=60d95fc3e445373582daada53a4ddba45ec1e9a465ad735fa00b2916fccd16a2
+Flask==3.0.3
+Flask-Admin==1.6.1
+Flask-Cors==4.0.1
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-Session==0.8.0
+Flask-SocketIO==5.3.7
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+flatbuffers==24.3.25
+fonttools==4.49.0
+frozenlist==1.4.1
+fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.42
+google-api-core==2.20.0
+google-api-python-client==2.148.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-pasta==0.2.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+graphene==3.3
+graphql-core==3.2.4
+graphql-relay==3.2.0
+greenlet==3.0.3
+groq==0.9.0
+grpcio==1.66.2
+grpcio-status==1.66.2
+gunicorn==19.9.0
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+httpx-sse==0.4.0
+huggingface-hub==0.24.5
+idna==3.6
+importlib-metadata==6.11.0
+ipykernel==6.29.4
+ipython==8.24.0
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.0.2
+jax==0.4.30
+jaxlib==0.4.30
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.5.0
+jmespath==1.0.1
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+keyring==25.3.0
+kiwisolver==1.4.5
+l==0.11.0
+langchain-core==0.2.33
+langchain-groq==0.1.9
+langchain-openai==0.1.22
+langsmith==0.1.99
+lxml==5.1.0
+Mako==1.3.5
+mapping==0.1.6
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+matplotlib==3.6.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mediapipe==0.10.14
+ml-dtypes==0.4.0
+mlflow==2.16.2
+mlflow-skinny==2.16.2
+mock==4.0.3
+monotonic==1.6
+more-itertools==10.4.0
+MouseInfo==0.1.3
+mpmath==1.3.0
+msgpack==1.1.0
+msgspec==0.18.6
+multidict==6.0.5
+multiprocess==0.70.17
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.3
+nh3==0.2.18
+numpy==1.23.5
+openai==0.28.0
+opencv-contrib-python==4.10.0.84
+opencv-python==4.8.1.78
+opentelemetry-api==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opt-einsum==3.3.0
+orjson==3.10.7
+osqp==0.6.5
+outcome==1.3.0.post0
+package-name==0.1
+packaging==23.2
+pandas==1.5.2
+parameterized==0.9.0
+parso==0.8.4
+pathos==0.3.3
+pillow==10.2.0
+pkginfo==1.10.0
+platformdirs==4.2.2
+pox==0.3.5
+ppft==1.7.6.9
+premailer==3.10.0
+prompt-toolkit==3.0.43
+proto-plus==1.24.0
+protobuf==4.25.5
+psutil==5.9.8
+psycopg2==2.9.9
+pure-eval==0.2.2
+pyarrow==15.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAutoGUI==0.9.54
+pybind11==2.11.1
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.8.1b0
+pygame==2.5.2
+PyGetWindow==0.0.9
+Pygments==2.17.2
+PyJWT==2.8.0
+Pympler==1.0.1
+PyMsgBox==1.0.9
+pyparsing==3.1.2
+pyperclip==1.9.0
+pyproject-toml==0.0.10
+PyRect==0.2.0
+PyScreeze==0.1.30
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-socketio==5.11.4
+pytweening==1.2.0
+pytz==2023.3.post1
+pywin32==306
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+pyzmq==26.0.3
+qdldl==0.1.7.post0
+readme_renderer==44.0
+referencing==0.31.1
+regex==2024.7.24
+requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
+rpds-py==0.13.2
+rsa==4.9
+s3transfer==0.10.0
+safetensors==0.4.4
+sagemaker==2.232.2
+sagemaker-core==1.0.10
+sagemaker-mlflow==0.1.0
+schema==0.7.7
+scikit-learn==1.2.0
+scipy==1.11.4
+scs==3.2.4.post1
+seaborn==0.12.2
+selenium==4.21.0
+semver==3.0.2
+simple-websocket==1.0.0
+six==1.16.0
+smdebug-rulesconfig==1.0.1
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+sounddevice==0.4.7
+SQLAlchemy==2.0.32
+sqlparse==0.4.4
+stack-data==0.6.3
+streamlit==1.16.0
+styled==0.3.1
+sympy==1.13.2
+tblib==3.0.0
+tenacity==8.2.3
+threadpoolctl==3.3.0
+tiktoken==0.7.0
+tinify==1.6.0
+tokenizers==0.20.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.4.0
+tornado==6.4
+tqdm==4.66.5
+traitlets==5.14.3
+trio==0.25.1
+trio-websocket==0.11.1
+twine==5.1.1
+types-requests==2.32.0.20240914
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2023.3
+tzlocal==5.2
+uritemplate==4.1.1
+urllib3==2.2.1
+validators==0.22.0
+vcversioner==2.16.0.0
+waitress==3.0.0
+watchdog==4.0.0
+wcwidth==0.2.13
+webdriver-manager==4.0.1
+websockets==12.0
+Werkzeug==3.0.4
+wrapt==1.16.0
+wsproto==1.2.0
+WTForms==3.1.2
+xgboost==1.7.3
+Yag==1.0.0
+yagmail==0.15.293
+yarl==1.9.4
+zhipuai==2.1.4.20230814
+zipp==3.17.0
+zope.interface==6.4.post2
